[gd_scene load_steps=5 format=3 uid="uid://c7dlssdrpomif"]

[ext_resource type="Script" path="res://Main.gd" id="1_1uxmb"]
[ext_resource type="PackedScene" uid="uid://bt4xns1d4oov" path="res://Enemy.tscn" id="2_8vimd"]
[ext_resource type="PackedScene" uid="uid://bdtfnf5v48evu" path="res://Player.tscn" id="3_w1loi"]

[sub_resource type="Curve2D" id="Curve2D_fh5fa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_1uxmb")
enemy_scene = ExtResource("2_8vimd")

[node name="EnemyTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fh5fa")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[node name="Player" parent="." instance=ExtResource("3_w1loi")]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
